cmake_minimum_required(VERSION 3.14)

project(Project_LangageC)

set(CMAKE_C_STANDARD 11)

## add_executable(test operateur.c)

## add_executable(test fonctions.c)

## add_executable(test structure_while_for.c)

## add_executable(test console_rectangle.c)

## add_executable(test structure_while_for_autorisees.c)

## add_executable(test tableau_un_deux_dimension.c)

## add_executable(test sum_tabs.c)

## add_executable(test portee_variable.c)

add_executable(test RenderingEngine.c)